[project]
name = "darjeeling-blog"
version = "0.1.0"
description = "Pelican-powered blog for iz4u.net"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.135.1",
    "ghp-import==2.1.0",
    "grapheme>=0.6.0",
    "httpx>=0.28.1",
    "invoke==2.2.0",
    "livereload==2.7.1",
    "markdown==3.10",
    "pelican==4.11.0.post0",
    "pelican-sitemap==1.2.2",
    "pillow>=12.2.0",
    "pydantic-ai-slim[openai]>=1.99.0",
    "pydantic-settings>=2.13.1",
    "pyrage>=1.3.0",
    "python-multipart>=0.0.30",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff==0.13.0",
]

[tool.uv]
default-groups = ["dev"]
# pelican caps pygments <2.20 but 2.20 fixes GHSA-5239-wwwm-4pmq (ReDoS);
# the site build is verified against the newer pygments
override-dependencies = ["pygments>=2.20.0"]
